--- a/Source/Framework/Resources/MapKit.html
+++ b/Source/Framework/Resources/MapKit.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&v=3.6"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 
 <style type="text/css">
 
